[gd_scene load_steps=2 format=3 uid="uid://photo_mode_ui"]

[ext_resource type="Script" path="res://game/scripts/ui/PhotoModeUI.gd" id="1_script"]

[node name="PhotoModeUI" type="CanvasLayer"]
layer = 125
process_mode = 3
script = ExtResource("1_script")

[node name="ControlsPanel" type="PanelContainer" parent="."]
offset_left = 380.0
offset_top = 80.0
offset_right = 500.0
offset_bottom = 200.0

[node name="VBox" type="VBoxContainer" parent="ControlsPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PhotoButton" type="Button" parent="ControlsPanel/VBox"]
layout_mode = 2
text = "Take Photo"

[node name="HideUIButton" type="Button" parent="ControlsPanel/VBox"]
layout_mode = 2
text = "Hide UI"

[node name="StickersButton" type="Button" parent="ControlsPanel/VBox"]
layout_mode = 2
text = "Stickers"

[node name="ExitButton" type="Button" parent="ControlsPanel/VBox"]
layout_mode = 2
text = "Exit"

[node name="PhotoFlash" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 512.0
offset_bottom = 288.0
color = Color(1, 1, 1, 1)

[node name="PhotoCountLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 120.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
text = "Photos: 0"
